--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "hyxos_numerals"
+authors = ["Donnie Hyxos"]
+homepage = "https://hyxos.io"
+repository = "https://github.com/hyxos/hyxos_numerals"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
